--- a/ciardle.html
+++ b/ciardle.html
@@ -8,8 +8,8 @@ body {
   text-align: center;
 }
 #carImage {
-  width: 300px; /* Adjust as needed */
-  height: 200px; /* Adjust as needed */
+  width: 500px; /* Adjust as needed */
+  /*height: 400px; /* Adjust as needed */
   object-fit: cover; /* Prevents image distortion */
   border: 1px solid black;
 }
@@ -17,7 +17,7 @@ body {
 </head>
 <body>
 
-<h1>Ciarondle</h1>
+<h1>Ciardle</h1>
 
 <img id="carImage" src="" alt="Car Image">
 <p id="resultText"></p>
