--- a/ciardle.html
+++ b/ciardle.html
@@ -8,9 +8,10 @@ body {
   text-align: center;
 }
 #carImage {
-  width: 500px; /* Adjust as needed */
-  /*height: 400px; /* Adjust as needed */
-  object-fit: cover; /* Prevents image distortion */
+  width: auto;
+  /* width: 500px; /* Adjust as needed */
+  height: 500px; /* Adjust as needed */
+  object-fit: contain; /* Prevents image distortion */
   border: 1px solid black;
 }
 </style>
@@ -19,18 +20,40 @@ body {
 
 <h1>Ciardle</h1>
 
+<div id="Code">
+  Enter code: <input type="text" id="uniqueCode" value ="test"><button onclick="startNewGame()">Go!</button>
+</div>
+
 <img id="carImage" src="" alt="Car Image">
 <p id="resultText"></p>
-<input type="text" id="guessInput" placeholder="Enter your guess">
-<button onclick="checkGuess()">Guess</button>
+<input type="text" id="guessMake" placeholder="Enter your guess">
+<input type="text" id="guessModel" placeholder="Enter your guess">
+<button id="guessButton" onclick="checkGuess()">Guess</button>
+
+<table id="answerTable">
+  <thead>
+    <tr>
+      <th>Make</th>
+      <th>Model</th>
+    </tr>
+  </thead>
+  <tbody>
+    </tbody>
+</table>
 
 <script>
 let carImage = document.getElementById("carImage");
 let resultText = document.getElementById("resultText");
-let guessInput = document.getElementById("guessInput");
+let guessMake = document.getElementById("guessMake");
+let guessModel = document.getElementById("guessModel");
+let guessButton = document.getElementById("guessButton");
 let cars = [];
 let currentCar;
+let CarMake, CarModel;
 let currentGuessAttempts;
+let uniqueCode;
+let MakeCorrect = false;
+let ModelCorrect = false;
 const maxGuessAttempts = 5;
 const revealPercentages = [20, 40, 60, 80, 100];
 
@@ -42,36 +65,123 @@ cars.push({ name: "Bond Bug", image: "car.jpg" }); // Replace with actual paths
 //cars.push({ name: "Audi R8", image: "audi_r8.jpg" }); // Replace with actual paths
 // Add more car data here...
 
-function startNewGame() {
+
+
+async function startNewGame() {
+  uniqueCode = document.getElementById('uniqueCode').value;
   currentGuessAttempts = 0;
   let randomIndex = Math.floor(Math.random() * cars.length);
   currentCar = cars[randomIndex];
 
+  resultText.textContent = "";
+  guessMake.disabled = false;
+  guessMake.value = ""; // Clear input field
+  guessModel.disabled = false;
+  guessModel.value = ""; // Clear input field
+  guessButton.disabled = false;
+
+  // Load make and model answer from text file
+  //getInfoFromCloudinaryTextFile()
+  try {
+    const result = await getInfoFromCloudinaryTextFile();
+    console.log('result:', result);
+    console.log('Make:',CarMake, ', Model:', CarModel);
+    
+  } catch (error) {
+    console.error('Text file download error:', error);
+  }
+
+  ImageURLStart = 'https://res.cloudinary.com/nickrobberts/image/upload/ciardleImage' + uniqueCode;
+  ImageURLEnd = '.png';
+
   // Load the initial cropped image
-  carImage.src = currentCar.image
+  //carImage.src = currentCar.image
+  carImage.src = ImageURLStart + '1' + ImageURLEnd;
   //carImage.src = getCroppedImagePath(currentCar.image, revealPercentages[currentGuessAttempts]);
   //carImage.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/1973_Bond_Bug_700_ES.jpg/512px-1973_Bond_Bug_700_ES.jpg?20210914202413"
-  resultText.textContent = "";
-  guessInput.disabled = false;
-  guessInput.value = ""; // Clear input field
+}
+
+function getInfoFromCloudinaryTextFile() {
+
+  const cloudName = 'nickrobberts';
+  const publicId = 'ciardleText' + uniqueCode; // Same public ID as uploaded
+  const fileFormat = 'txt'; // Same file format as uploaded
+
+  return new Promise(async (resolve, reject) => {
+    if (!cloudName || !publicId || !fileFormat) {
+      reject(new Error('Cloud name, public ID, and file format are required.'));
+      return;
+    }
+
+    //const downloadUrl = `https://res.cloudinary.com/${cloudName}/raw/upload/${publicId}.${fileFormat}`;
+    const downloadUrl = `https://res.cloudinary.com/${cloudName}/raw/upload/${publicId}`;
+
+    try {
+      const response = await fetch(downloadUrl);
+
+      if (!response.ok) {
+        reject(new Error(`Failed to download file: ${response.statusText}`));
+        return;
+      }
+
+      const text = await response.text();
+      const strings = text.split('\n'); // Split by newline
+
+      if (strings.length >= 2) {
+        CarMake = strings[0];
+        CarModel = strings[1];
+        resolve({ string1: strings[0], string2: strings[1] });
+
+      } else {
+        reject(new Error('File does not contain two strings.'));
+      }
+    } catch (error) {
+      reject(error);
+    }
+
+  });
 }
 
 function checkGuess() {
-  let userGuess = guessInput.value;
+  let userGuessMake = guessMake.value;
+  let userGuessModel = guessModel.value;
 
-  if (userGuess.toLowerCase() === currentCar.name.toLowerCase()) {  //Case-insensitive comparison
-    resultText.textContent = "Correct!";
-    guessInput.disabled = true;
+  addAnswerRow(userGuessMake, userGuessModel);
+
+  // Check Make
+
+  if (userGuessMake.toLowerCase() === CarMake.toLowerCase())
+  {
+    userGuessMake = true;
+  }
+
+  if (userGuessModel.toLowerCase() === CarModel.toLowerCase())
+  {
+    userGuessModel = true;
+  }
+
+  resultText.textContent = "Make:" + (userGuessMake==true ? '\u2713' : '\u2717') + ", Model:" + (userGuessModel==true ? '\u2713' : '\u2717')
+
+  if (userGuessMake==true && userGuessModel==true)
+  {
+    //resultText.textContent = "Correct!";
+    guessMake.disabled = true;
+    guessModel.disabled = true;
+    guessButton.disabled = true;
   } else {
     currentGuessAttempts++;
     if (currentGuessAttempts < maxGuessAttempts) {
-      resultText.textContent = "Incorrect. Try again.";
+      //resultText.textContent = "Incorrect. Try again.";
       //carImage.src = getCroppedImagePath(currentCar.image, revealPercentages[currentGuessAttempts]);
-      carImage.src = getCroppedImagePath(currentCar.image, currentGuessAttempts);
+      //carImage.src = getCroppedImagePath(currentCar.image, currentGuessAttempts);
+      carImage.src = ImageURLStart + currentGuessAttempts + ImageURLEnd;
       
     } else {
-      resultText.textContent = "Out of guesses! The answer was " + currentCar.name;
-      guessInput.disabled = true;
+      resultText.textContent = "Out of guesses! The answer was " + CarMake + " " + CarModel;
+      carImage.src = ImageURLStart + ImageURLEnd;
+      guessMake.disabled = true;
+      guessModel.disabled = true;
+      guessButton.disabled = true;
     }
   }
 }
@@ -86,7 +196,20 @@ function getCroppedImagePath(imagePath, guesses) {
   return imagePath.replace(".jpg", guesses + ".jpg"); // Modify as needed
 }
 
-startNewGame(); // Start the game when the page loads
+function addAnswerRow(makeString, modelString) {
+      const table = document.getElementById("answerTable").getElementsByTagName('tbody')[0];
+
+
+        const newRow = table.insertRow();
+        const cell1 = newRow.insertCell(0);
+        const cell2 = newRow.insertCell(1);
+
+        cell1.innerHTML = makeString;
+        cell2.innerHTML = modelString;
+
+      }
+
+//startNewGame(); // Start the game when the page loads
 
 </script>
 
