Show full image on correct answer as well as wrong

--- a/ciardle.html
+++ b/ciardle.html
@@ -165,6 +165,7 @@ function checkGuess() {
   if (userGuessMake==true && userGuessModel==true)
   {
     //resultText.textContent = "Correct!";
+    carImage.src = ImageURLStart + ImageURLEnd;
     guessMake.disabled = true;
     guessModel.disabled = true;
     guessButton.disabled = true;
