Added logo graphic

--- a/ciardle.html
+++ b/ciardle.html
@@ -47,7 +47,7 @@ input {
   Enter code: <input type="text" id="uniqueCode" value ="test"><button onclick="startNewGame()">Go!</button>
 </div>
 
-<img id="carImage" src="" alt="Car Image">
+<img id="carImage" src="./Ciardlelogo.png" alt="Car Image">
 <p id="resultText"></p>
 <input type="text" id="guessMake" placeholder="Enter Make">
 <input type="text" id="guessModel" placeholder="Enter Model">
