--- a/make.html
+++ b/make.html
@@ -37,10 +37,16 @@
         gap: 0.5rem; /* gap-2 */
     }
     .button-primary {
-        @apply bg-blue-600 text-white px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition duration-200 ease-in-out;
+        /* Explicitly set background and color */
+        background-color: #2563eb; /* bg-blue-600 */
+        color: #ffffff; /* text-white */
+        @apply px-4 py-2 rounded-lg shadow hover:bg-blue-700 transition duration-200 ease-in-out border border-blue-700;
     }
     .button-secondary {
-        @apply bg-gray-200 text-gray-800 px-4 py-2 rounded-lg shadow hover:bg-gray-300 transition duration-200 ease-in-out;
+        /* Explicitly set background and color */
+        background-color: #e5e7eb; /* bg-gray-200 */
+        color: #374151; /* text-gray-800 */
+        @apply px-4 py-2 rounded-lg shadow hover:bg-gray-300 transition duration-200 ease-in-out border border-gray-400;
     }
     .img-thumbnail {
         @apply border border-gray-300 rounded-lg object-contain;
